--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,115 @@
 {
+    "authors": [
+        {
+            "name": "David Mattei",
+            "email": "david.mattei@smals.be"
+        },
+        {
+            "name": "Mathieu De Keyzer",
+            "email": "mathieu@dekeyzer.net"
+        },
+        {
+            "name": "EMS Community",
+            "homepage": "https://github.com/ems-project/EMSCommonBundle/contributors"
+        }
+    ],
+    "require": {
+        "php": "^7.4",
+        "ext-ctype": "*",
+        "ext-dom": "*",
+        "ext-exif": "*",
+        "ext-gd": "*",
+        "ext-iconv": "*",
+        "ext-json": "*",
+        "ext-mbstring": "*",
+        "ext-sqlite3": "*",
+        "ext-tidy": "*",
+        "ext-zip": "*",
+        "aws/aws-sdk-php": "^3.109",
+        "cebe/markdown": "^1.2",
+        "doctrine/doctrine-bundle": "^2.7",
+        "doctrine/doctrine-migrations-bundle": "^3.2",
+        "doctrine/orm": "^2.6",
+        "dompdf/dompdf": "^v2.0",
+        "guzzlehttp/guzzle": "^6.3",
+        "kevinrob/guzzle-cache-middleware": "^4.0",
+        "phpoffice/phpspreadsheet": "^1.16",
+        "promphp/prometheus_client_php": "^2.6",
+        "ramsey/uuid-doctrine": "^1.6",
+        "ruflin/elastica": "^7.2",
+        "symfony/console": "^5.4",
+        "symfony/css-selector": "^5.4",
+        "symfony/dom-crawler": "^5.4",
+        "symfony/dotenv": "^5.4",
+        "symfony/event-dispatcher": "^5.4",
+        "symfony/expression-language": "^5.4",
+        "symfony/flex": "^1.17|^2",
+        "symfony/framework-bundle": "^5.4",
+        "symfony/http-client": "^5.4",
+        "symfony/mime": "^4.4|^5.4",
+        "symfony/monolog-bundle": "^3.8",
+        "symfony/options-resolver": "^5.4",
+        "symfony/process": "^5.4",
+        "symfony/property-access": "^5.4",
+        "symfony/routing": "^5.4",
+        "symfony/runtime": "^5.4",
+        "symfony/security-core": "^5.4",
+        "symfony/serializer": "^5.4",
+        "symfony/stopwatch": "^5.4",
+        "symfony/translation": "^5.4",
+        "symfony/yaml": "^5.4",
+        "twig/cache-extra": "^3.4",
+        "twig/cssinliner-extra": "^3.4",
+        "twig/extra-bundle": "^3.4",
+        "twig/html-extra": "^3.4",
+        "twig/inky-extra": "^3.4",
+        "twig/intl-extra": "^3.4",
+        "twig/markdown-extra": "^3.4",
+        "twig/string-extra": "^3.4",
+        "twig/twig": "^3.0"
+    },
     "require-dev": {
+        "friendsofphp/php-cs-fixer": "^3.0",
+        "mockery/mockery": "^0.9",
+        "phpstan/extension-installer": "^1.1",
+        "phpstan/phpstan": "^1.0",
+        "phpstan/phpstan-doctrine": "^1.3",
+        "phpstan/phpstan-phpunit": "^0.12.8",
+        "phpstan/phpstan-symfony": "^1.2",
+        "phpunit/phpunit": "^9.5",
+        "symfony/test-pack": "^1.0",
         "symplify/monorepo-builder-prefixed": "^9.0"
-    }
+    },
+    "autoload": {
+        "exclude-from-classmap": [
+            "EMS/helpers/tests/"
+        ],
+        "psr-4": {
+            "App\\": "elasticms-cli/src/",
+            "EMS\\CommonBundle\\": "EMS/common-bundle/src/",
+            "EMS\\Helpers\\": "EMS/helpers/src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "App\\Tests\\": "elasticms-cli/tests/",
+            "EMS\\CommonBundle\\Tests\\": "EMS/common-bundle/tests/",
+            "EMS\\Helpers\\Tests\\": "EMS/helpers/tests/"
+        }
+    },
+    "extra": {
+        "symfony": {
+            "allow-contrib": false,
+            "require": "^5.4"
+        }
+    },
+    "replace": {
+        "elasticms/common-bundle": "self.version",
+        "elasticms/helpers": "self.version",
+        "symfony/polyfill-ctype": "*",
+        "symfony/polyfill-iconv": "*",
+        "symfony/polyfill-php72": "*"
+    },
+    "minimum-stability": "stable",
+    "prefer-stable": true
 }
