--- a/elasticms-cli/composer.json
+++ b/elasticms-cli/composer.json
@@ -4,7 +4,7 @@
     "minimum-stability": "stable",
     "prefer-stable": true,
     "require": {
-        "php": ">=7.4.5",
+        "php": "^7.4",
         "ext-ctype": "*",
         "ext-iconv": "*",
         "ext-json": "*",
@@ -12,18 +12,18 @@
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "elasticms/common-bundle": "^2.0",
         "kevinrob/guzzle-cache-middleware": "^4.0",
-        "symfony/console": "5.4.*",
-        "symfony/css-selector": "5.4.*",
-        "symfony/dotenv": "5.4.*",
+        "symfony/console": "^5.4",
+        "symfony/css-selector": "^5.4",
+        "symfony/dotenv": "^5.4",
         "symfony/flex": "^1.17|^2",
-        "symfony/framework-bundle": "5.4.*",
-        "symfony/runtime": "5.4.*",
-        "symfony/yaml": "5.4.*"
+        "symfony/framework-bundle": "^5.4",
+        "symfony/runtime": "^5.4",
+        "symfony/yaml": "^5.4"
     },
     "require-dev": {
       "friendsofphp/php-cs-fixer": "^3.0",
-      "phpstan/phpstan": "^0.12",
-      "phpunit/phpunit": "^7.1"
+      "phpstan/phpstan": "^1.0",
+      "phpunit/phpunit": "^9.5"
     },
     "config": {
         "allow-plugins": {
@@ -74,7 +74,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "5.4.*"
+            "require": "^5.4"
         }
     }
 }
