--- a/composer.json
+++ b/composer.json
@@ -74,7 +74,7 @@
         "phpstan/extension-installer": "^1.1",
         "phpstan/phpstan": "^1.0",
         "phpstan/phpstan-doctrine": "^1.3",
-        "phpstan/phpstan-phpunit": "^0.12.8",
+        "phpstan/phpstan-phpunit": "^1.0",
         "phpstan/phpstan-symfony": "^1.2",
         "phpunit/phpunit": "^9.5",
         "symfony/test-pack": "^1.0",
@@ -97,6 +97,16 @@
             "EMS\\Helpers\\Tests\\": "EMS/helpers/tests/"
         }
     },
+    "scripts": {
+      "phpcs": "php-cs-fixer fix",
+      "phpstan": "phpstan analyse --memory-limit 1G",
+      "phpunit":  "phpunit",
+      "phpall": "php-cs-fixer fix && phpunit && phpstan analyse --memory-limit 1G",
+        "auto-scripts": {
+            "cache:clear": "symfony-cmd",
+            "assets:install %PUBLIC_DIR%": "symfony-cmd"
+        }
+    },
     "extra": {
         "symfony": {
             "allow-contrib": false,
@@ -111,5 +121,12 @@
         "symfony/polyfill-php72": "*"
     },
     "minimum-stability": "stable",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "config": {
+        "allow-plugins": {
+            "phpstan/extension-installer": true,
+            "symfony/flex": false,
+            "symfony/runtime": false
+        }
+    }
 }
