--- a/EMS/common-bundle/phpstan.neon.dist
+++ b/EMS/common-bundle/phpstan.neon.dist
@@ -1,11 +1,8 @@
-includes:
-    - vendor/phpstan/phpstan-symfony/extension.neon
-    - vendor/phpstan/phpstan-symfony/rules.neon
-    - vendor/phpstan/phpstan-doctrine/extension.neon
-
 parameters:
     paths:
         - %currentWorkingDirectory%/src
     excludePaths:
         - %currentWorkingDirectory%/src/Resources/*
     level: 8
+    parallel:
+        maximumNumberOfProcesses: 2
