--- a/EMS/helpers/phpstan.neon.dist
+++ b/EMS/helpers/phpstan.neon.dist
@@ -3,6 +3,6 @@ parameters:
         - %currentWorkingDirectory%/src
     excludes_analyse:
         - %currentWorkingDirectory%/vendor/*
-    reportUnmatchedIgnoredErrors: false
     level: 8
-    inferPrivatePropertyTypeFromConstructor: true
+    parallel:
+        maximumNumberOfProcesses: 2
