--- a/elasticms-cli/phpstan.neon.dist
+++ b/elasticms-cli/phpstan.neon.dist
@@ -1,11 +1,8 @@
 parameters:
     paths:
         - %currentWorkingDirectory%/src
-    ignoreErrors:
-        - '#Call to an undefined method [a-zA-Z0-9\\_]+Repository::findOneById().#'
-        - '#Call to an undefined method [a-zA-Z0-9\\_]+Repository::findOneByName().#'
-        - '#Call to an undefined method [a-zA-Z0-9\\_]+Repository::findByContentType().#'
-    reportUnmatchedIgnoredErrors: false
+    excludes_analyse:
+        - %currentWorkingDirectory%/vendor/*
     level: 8
     inferPrivatePropertyTypeFromConstructor: true
     parallel:
