--- a/EMS/common-bundle/tests/Integration/App/config/config.yml
+++ b/EMS/common-bundle/tests/Integration/App/config/config.yml
@@ -5,6 +5,7 @@ framework:
   secret: 1621180219f163d89dc399e88cfc1807ab6448cf
   session:
     handler_id: ~
+    storage_factory_id: session.storage.factory.native
   router:
     resource: ~
     utf8: true
