--- a/composer.json
+++ b/composer.json
@@ -71,6 +71,7 @@
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.0",
         "mockery/mockery": "^0.9",
+        "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/extension-installer": "^1.1",
         "phpstan/phpstan": "^1.0",
         "phpstan/phpstan-doctrine": "^1.3",
