--- a/composer.json
+++ b/composer.json
@@ -79,7 +79,8 @@
         "phpstan/phpstan-symfony": "^1.2",
         "phpunit/phpunit": "^9.5",
         "symfony/test-pack": "^1.0",
-        "symplify/monorepo-builder-prefixed": "^9.0"
+        "symplify/monorepo-builder-prefixed": "^9.0",
+        "rector/rector": "^0.14.8"
     },
     "autoload": {
         "exclude-from-classmap": [
