fix: ext-intl required by rector

--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "ext-exif": "*",
         "ext-gd": "*",
         "ext-iconv": "*",
+        "ext-intl": "*",
         "ext-json": "*",
         "ext-mbstring": "*",
         "ext-sqlite3": "*",
