--- a/.github/workflows/splitter.yml
+++ b/.github/workflows/splitter.yml
@@ -5,6 +5,14 @@ on:
         branches:
             - '4.*'
 
+    create:
+        tags:
+            - '*'
+
+    delete:
+        tags:
+            - '*'
+
 jobs:
     sync_commits:
         runs-on: ubuntu-latest
@@ -32,3 +40,4 @@ jobs:
                 uses: acrobat/subtree-splitter@v1.1.3
                 with:
                     config-path: .github/subtree-splitter-config.json
+                    batch-size: 1
