--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "ext-exif": "*",
         "ext-gd": "*",
         "ext-iconv": "*",
+        "ext-intl": "*",
         "ext-json": "*",
         "ext-mbstring": "*",
         "ext-sqlite3": "*",
@@ -79,7 +80,8 @@
         "phpstan/phpstan-symfony": "^1.2",
         "phpunit/phpunit": "^9.5",
         "symfony/test-pack": "^1.0",
-        "symplify/monorepo-builder-prefixed": "^9.0"
+        "symplify/monorepo-builder-prefixed": "^9.0",
+        "rector/rector": "^0.14.8"
     },
     "autoload": {
         "exclude-from-classmap": [
@@ -99,14 +101,11 @@
         }
     },
     "scripts": {
+      "rector":  "rector",
       "phpcs": "php-cs-fixer fix",
       "phpstan": "phpstan analyse --memory-limit 1G",
       "phpunit":  "phpunit",
-      "phpall": "php-cs-fixer fix && phpunit && phpstan analyse --memory-limit 1G",
-        "auto-scripts": {
-            "cache:clear": "symfony-cmd",
-            "assets:install %PUBLIC_DIR%": "symfony-cmd"
-        }
+      "phpall": "rector && php-cs-fixer fix && phpunit && phpstan analyse --memory-limit 1G"
     },
     "extra": {
         "symfony": {
