ref: add phpunit

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -10,6 +10,7 @@
   <coverage>
     <include>
       <directory>./elasticms-cli/src/</directory>
+      <directory>./EMS/client-helper-bundle/src/</directory>
       <directory>./EMS/common-bundle/src/</directory>
       <directory>./EMS/helpers/src/</directory>
     </include>
@@ -27,6 +28,7 @@
   <testsuites>
       <testsuite name="Unit suite">
           <directory>./elasticms-cli/tests</directory>
+          <directory>./EMS/client-helper-bundle/tests</directory>
           <directory>./EMS/common-bundle/tests</directory>
           <directory>./EMS/helpers/tests/Unit</directory>
       </testsuite>
