--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -12,6 +12,7 @@
       <directory>./elasticms-cli/src/</directory>
       <directory>./EMS/client-helper-bundle/src/</directory>
       <directory>./EMS/common-bundle/src/</directory>
+      <directory>./EMS/form-bundle/src/</directory>
       <directory>./EMS/helpers/src/</directory>
     </include>
   </coverage>
@@ -30,6 +31,7 @@
           <directory>./elasticms-cli/tests</directory>
           <directory>./EMS/client-helper-bundle/tests</directory>
           <directory>./EMS/common-bundle/tests</directory>
+          <directory>./EMS/form-bundle/tests</directory>
           <directory>./EMS/helpers/tests/Unit</directory>
       </testsuite>
   </testsuites>
