--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -1,6 +1,7 @@
 parameters:
     paths:
         - %currentWorkingDirectory%/elasticms-cli/src
+        - %currentWorkingDirectory%/elasticms-web/src
         - %currentWorkingDirectory%/EMS/client-helper-bundle/src
         - %currentWorkingDirectory%/EMS/common-bundle/src
         - %currentWorkingDirectory%/EMS/form-bundle/src
