--- a/composer.json
+++ b/composer.json
@@ -22,28 +22,38 @@
         "ext-iconv": "*",
         "ext-intl": "*",
         "ext-json": "*",
+        "ext-libxml": "*",
         "ext-mbstring": "*",
+        "ext-openssl": "*",
+        "ext-simplexml": "*",
+        "ext-soap": "*",
         "ext-sqlite3": "*",
         "ext-tidy": "*",
         "ext-zip": "*",
         "aws/aws-sdk-php": "^3.109",
+        "caxy/php-htmldiff": "^0.1",
         "cebe/markdown": "^1.2",
         "composer/ca-bundle": "^1.1",
         "doctrine/doctrine-bundle": "^2.7",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.6",
         "dompdf/dompdf": "^v2.0",
+        "dragonmantank/cron-expression": "^3.1",
         "giggsey/libphonenumber-for-php": "^8.12",
         "guzzlehttp/guzzle": "^6.3",
         "kevinrob/guzzle-cache-middleware": "^4.0",
         "league/flysystem-memory": "^2.0",
         "league/flysystem-sftp-v3": "^2.0",
+        "ocramius/doctrine-batch-utils": "2.1",
         "phpoffice/phpspreadsheet": "^1.16",
         "promphp/prometheus_client_php": "^2.6",
-        "ramsey/uuid-doctrine": "^1.6",
+        "ramsey/uuid-doctrine": "^1.8",
         "ruflin/elastica": "^7.2",
+        "sensio/framework-extra-bundle": "^6.2",
+        "sensiolabs/ansi-to-html": "^1.1",
         "symfony-cmf/routing": "^2.3",
         "symfony/asset": "^5.4",
+        "symfony/cache": "^5.4",
         "symfony/console": "^5.4",
         "symfony/css-selector": "^5.4",
         "symfony/dom-crawler": "^5.4",
@@ -55,14 +65,17 @@
         "symfony/framework-bundle": "^5.4",
         "symfony/http-client": "^5.4",
         "symfony/intl": "^5.4",
+        "symfony/ldap": "^5.4",
         "symfony/mailer": "^5.4",
         "symfony/mime": "^5.4",
+        "symfony/monolog-bridge": "^5.4",
         "symfony/monolog-bundle": "^3.8",
         "symfony/options-resolver": "^5.4",
         "symfony/process": "^5.4",
         "symfony/property-access": "^5.4",
         "symfony/routing": "^5.4",
         "symfony/runtime": "^5.4",
+        "symfony/security-bundle": "^5.4",
         "symfony/security-core": "^5.4",
         "symfony/security-csrf": "^5.4",
         "symfony/serializer": "^5.4",
@@ -70,6 +83,7 @@
         "symfony/translation": "^5.4",
         "symfony/twig-bundle": "^5.4",
         "symfony/validator": "^5.4",
+        "symfony/web-link": "^5.4",
         "symfony/yaml": "^5.4",
         "twig/cache-extra": "^3.4",
         "twig/cssinliner-extra": "^3.4",
@@ -104,6 +118,7 @@
             "App\\": "elasticms-cli/src/",
             "EMS\\ClientHelperBundle\\": "EMS/client-helper-bundle/src/",
             "EMS\\CommonBundle\\": "EMS/common-bundle/src/",
+            "EMS\\CoreBundle\\": "EMS/core-bundle/src/",
             "EMS\\FormBundle\\": "EMS/form-bundle/src/",
             "EMS\\Helpers\\": "EMS/helpers/src/",
             "EMS\\SubmissionBundle\\": "EMS/submission-bundle/src/",
@@ -115,6 +130,7 @@
             "App\\Tests\\": "elasticms-cli/tests/",
             "EMS\\ClientHelperBundle\\Tests\\": "EMS/client-helper-bundle/tests/",
             "EMS\\CommonBundle\\Tests\\": "EMS/common-bundle/tests/",
+            "EMS\\CoreBundle\\Tests\\": "EMS/core-bundle/tests/",
             "EMS\\FormBundle\\Tests\\": "EMS/form-bundle/tests/",
             "EMS\\Helpers\\Tests\\": "EMS/helpers/tests/",
             "EMS\\SubmissionBundle\\Tests\\": "EMS/submission-bundle/tests/",
@@ -137,6 +153,7 @@
     "replace": {
         "elasticms/client-helper-bundle": "self.version",
         "elasticms/common-bundle": "self.version",
+        "elasticms/core-bundle": "self.version",
         "elasticms/form-bundle": "self.version",
         "elasticms/helpers": "self.version",
         "elasticms/submission-bundle": "self.version",
