fix: composer conflicts resolved

--- a/elasticms-cli/composer.json
+++ b/elasticms-cli/composer.json
@@ -10,12 +10,12 @@
         "ext-json": "*",
         "ext-sqlite3": "*",
         "doctrine/doctrine-migrations-bundle": "^3.2",
-        "elasticms/common-bundle": "^4.0",
+        "elasticms/common-bundle": "^4.2",
         "kevinrob/guzzle-cache-middleware": "^4.0",
         "symfony/console": "^5.4",
         "symfony/css-selector": "^5.4",
         "symfony/dotenv": "^5.4",
-        "symfony/flex": "^1.17|^2",
+        "symfony/flex": "^1.6",
         "symfony/framework-bundle": "^5.4",
         "symfony/runtime": "^5.4",
         "symfony/yaml": "^5.4"
