--- a/EMS/client-helper-bundle/tests/Integration/App/config/config.yml
+++ b/EMS/client-helper-bundle/tests/Integration/App/config/config.yml
@@ -8,6 +8,7 @@ framework:
   csrf_protection: ~
   session:
     handler_id: ~
+    storage_factory_id: session.storage.factory.native
   router:
     resource: 'config/routes.yml'
     utf8: true
