--- a/EMS/core-bundle/tests/Integration/App/config/config.yaml
+++ b/EMS/core-bundle/tests/Integration/App/config/config.yaml
@@ -9,6 +9,7 @@ framework:
   csrf_protection: ~
   session:
     handler_id: ~
+    storage_factory_id: session.storage.factory.native
   router:
     resource: '%kernel.project_dir%/config/routes.yaml'
     utf8: true
