--- a/composer.json
+++ b/composer.json
@@ -34,11 +34,14 @@
         "caxy/php-htmldiff": "^0.1",
         "cebe/markdown": "^1.2",
         "composer/ca-bundle": "^1.1",
+        "composer/package-versions-deprecated": "1.11.99.4",
         "doctrine/doctrine-bundle": "^2.7",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.6",
         "dompdf/dompdf": "^v2.0",
         "dragonmantank/cron-expression": "^3.1",
+        "endroid/qr-code-bundle": "^3.4",
+        "firebase/php-jwt": "^5.2",
         "giggsey/libphonenumber-for-php": "^8.12",
         "guzzlehttp/guzzle": "^6.3",
         "kevinrob/guzzle-cache-middleware": "^4.0",
@@ -60,7 +63,7 @@
         "symfony/dotenv": "^5.4",
         "symfony/event-dispatcher": "^5.4",
         "symfony/expression-language": "^5.4",
-        "symfony/flex": "^1.17|^2",
+        "symfony/flex": "^1.6",
         "symfony/form": "^5.4",
         "symfony/framework-bundle": "^5.4",
         "symfony/http-client": "^5.4",
@@ -106,8 +109,13 @@
         "phpstan/phpstan-symfony": "^1.2",
         "phpunit/phpunit": "^9.5",
         "rector/rector": "^0.14.8",
+        "symfony/browser-kit": "^5.4",
+        "symfony/debug-bundle": "^5.4",
+        "symfony/phpunit-bridge": "^6.1",
         "symfony/test-pack": "^1.0",
-        "symplify/monorepo-builder-prefixed": "^9.0"
+        "symfony/web-profiler-bundle": "^5.4",
+        "symplify/monorepo-builder-prefixed": "^9.0",
+        "zalas/phpunit-globals": "^2.3"
     },
     "autoload": {
         "exclude-from-classmap": [
@@ -115,7 +123,11 @@
             "EMS/xliff/tests/"
         ],
         "psr-4": {
-            "App\\": "elasticms-cli/src/",
+            "App\\": [
+                "elasticms-admin/src/",
+                "elasticms-cli/src/",
+                "elasticms-web/src/"
+            ],
             "EMS\\ClientHelperBundle\\": "EMS/client-helper-bundle/src/",
             "EMS\\CommonBundle\\": "EMS/common-bundle/src/",
             "EMS\\CoreBundle\\": "EMS/core-bundle/src/",
@@ -127,7 +139,11 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "App\\Tests\\": "elasticms-cli/tests/",
+            "App\\Tests\\": [
+                "elasticms-admin/tests/",
+                "elasticms-cli/tests/",
+                "elasticms-web/tests/"
+            ],
             "EMS\\ClientHelperBundle\\Tests\\": "EMS/client-helper-bundle/tests/",
             "EMS\\CommonBundle\\Tests\\": "EMS/common-bundle/tests/",
             "EMS\\CoreBundle\\Tests\\": "EMS/core-bundle/tests/",
@@ -158,6 +174,7 @@
         "elasticms/helpers": "self.version",
         "elasticms/submission-bundle": "self.version",
         "elasticms/xliff": "self.version",
+        "ems-project/elasticms": "self.version",
         "symfony/polyfill-ctype": "*",
         "symfony/polyfill-iconv": "*",
         "symfony/polyfill-php72": "*"
@@ -166,7 +183,8 @@
         "allow-plugins": {
             "phpstan/extension-installer": true,
             "symfony/flex": false,
-            "symfony/runtime": false
+            "symfony/runtime": false,
+            "endroid/installer": false
         }
     },
     "minimum-stability": "stable",
