chore(ci): remove test and keep rollback

--- a/.github/workflows/rollback_release.yml
+++ b/.github/workflows/rollback_release.yml
@@ -1,12 +1,9 @@
-name: 'Tag packages'
+name: 'Rollback release'
 
 on:
-    workflow_dispatch:
-        inputs:
-            tag:
-                description: New tag
-                required: true
-                type: text
+    delete:
+        tags:
+            - '*'
 
 jobs:
     sync_packages:
