chore(ci): remove rollback

--- a/.github/workflows/splitter.yml
+++ b/.github/workflows/splitter.yml
@@ -6,6 +6,9 @@ on:
             - '4.*'
         tags-ignore:
             - '*'
+    delete:
+        tags:
+            - '*'
 
 jobs:
     sync_commits:
