--- a/EMS/xliff/composer.json
+++ b/EMS/xliff/composer.json
@@ -25,12 +25,8 @@
         "symfony/property-access": "^5.4"
     },
 	"require-dev" : {
-		"friendsofphp/php-cs-fixer" : "^3.0",
 		"mockery/mockery" : "^0.9",
-		"phpstan/phpstan": "^1.0",
-		"phpunit/phpunit" : "^9.5",
-		"phpstan/phpstan-phpunit": "^0.12.8",
-		"phpstan/extension-installer": "^1.1"
+		"phpunit/phpunit" : "^9.5"
 	},
 	"autoload" : {
 		"psr-4" : {
