--- a/composer.json
+++ b/composer.json
@@ -123,11 +123,9 @@
             "EMS/xliff/tests/"
         ],
         "psr-4": {
+            "App\\Admin\\": "elasticms-admin/src/",
             "App\\CLI\\": "elasticms-cli/src/",
-            "App\\": [
-                "elasticms-admin/src/",
-                "elasticms-web/src/"
-            ],
+            "App\\": "elasticms-web/src/",
             "EMS\\ClientHelperBundle\\": "EMS/client-helper-bundle/src/",
             "EMS\\CommonBundle\\": "EMS/common-bundle/src/",
             "EMS\\CoreBundle\\": "EMS/core-bundle/src/",
@@ -139,11 +137,9 @@
     },
     "autoload-dev": {
         "psr-4": {
+            "App\\Admin\\Tests\\": "elasticms-admin/tests/",
             "App\\CLI\\Tests\\": "elasticms-cli/tests/",
-            "App\\Tests\\": [
-                "elasticms-admin/tests/",
-                "elasticms-web/tests/"
-            ],
+            "App\\Tests\\": "elasticms-admin/tests/",
             "EMS\\ClientHelperBundle\\Tests\\": "EMS/client-helper-bundle/tests/",
             "EMS\\CommonBundle\\Tests\\": "EMS/common-bundle/tests/",
             "EMS\\CoreBundle\\Tests\\": "EMS/core-bundle/tests/",
