--- a/composer.json
+++ b/composer.json
@@ -179,7 +179,7 @@
         "allow-plugins": {
             "phpstan/extension-installer": true,
             "symfony/flex": false,
-            "symfony/runtime": false,
+            "symfony/runtime": true,
             "endroid/installer": false
         }
     },
