--- a/elasticms-cli/composer.json
+++ b/elasticms-cli/composer.json
@@ -37,12 +37,12 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "src/"
+            "App\\CLI\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "App\\Tests\\": "tests/"
+            "App\\CLI\\Tests\\": "tests/"
         }
     },
     "replace": {
