--- a/elasticms-admin/config/services.yaml
+++ b/elasticms-admin/config/services.yaml
@@ -22,13 +22,13 @@ services:
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
-    App\:
+    App\Admin\:
         resource: '../src/*'
         exclude: '../src/{Kernel.php}'
 
     # controllers are imported separately to make sure services can be injected
     # as action arguments even if you don't extend any base controller class
-    App\Controller\:
+    App\Admin\Controller\:
         resource: '../src/Controller'
         tags: ['controller.service_arguments']
 
