--- a/elasticms-cli/config/packages/doctrine.yaml
+++ b/elasticms-cli/config/packages/doctrine.yaml
@@ -15,7 +15,7 @@ doctrine:
               is_bundle: false
               type: annotation
               dir: '%kernel.project_dir%/src/Entity'
-              prefix: 'App\Entity'
+              prefix: 'App\CLI\Entity'
               alias: App
 
 when@test:
