--- a/composer.json
+++ b/composer.json
@@ -123,11 +123,9 @@
             "EMS/xliff/tests/"
         ],
         "psr-4": {
-            "App\\": [
-                "elasticms-admin/src/",
-                "elasticms-cli/src/",
-                "elasticms-web/src/"
-            ],
+            "App\\Admin\\": "elasticms-admin/src/",
+            "App\\CLI\\": "elasticms-cli/src/",
+            "App\\Web\\": "elasticms-web/src/",
             "EMS\\ClientHelperBundle\\": "EMS/client-helper-bundle/src/",
             "EMS\\CommonBundle\\": "EMS/common-bundle/src/",
             "EMS\\CoreBundle\\": "EMS/core-bundle/src/",
@@ -139,11 +137,9 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "App\\Tests\\": [
-                "elasticms-admin/tests/",
-                "elasticms-cli/tests/",
-                "elasticms-web/tests/"
-            ],
+            "App\\Admin\\Tests\\": "elasticms-admin/tests/",
+            "App\\CLI\\Tests\\": "elasticms-cli/tests/",
+            "App\\Web\\Tests\\": "elasticms-admin/tests/",
             "EMS\\ClientHelperBundle\\Tests\\": "EMS/client-helper-bundle/tests/",
             "EMS\\CommonBundle\\Tests\\": "EMS/common-bundle/tests/",
             "EMS\\CoreBundle\\Tests\\": "EMS/core-bundle/tests/",
@@ -183,7 +179,7 @@
         "allow-plugins": {
             "phpstan/extension-installer": true,
             "symfony/flex": false,
-            "symfony/runtime": false,
+            "symfony/runtime": true,
             "endroid/installer": false
         }
     },
