--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,8 @@
         "endroid/qr-code-bundle": "^3.4",
         "firebase/php-jwt": "^5.2",
         "giggsey/libphonenumber-for-php": "^8.12",
-        "guzzlehttp/guzzle": "^6.3",
+        "guzzlehttp/guzzle": "^7.0.1",
+        "http-interop/http-factory-guzzle": "^1.0",
         "kevinrob/guzzle-cache-middleware": "^4.0",
         "league/flysystem-memory": "^2.0",
         "league/flysystem-sftp-v3": "^2.0",
@@ -97,11 +98,12 @@
         "twig/intl-extra": "^3.4",
         "twig/markdown-extra": "^3.4",
         "twig/string-extra": "^3.4",
-        "twig/twig": "^3.0",
-        "symplify/monorepo-builder": "^11.1"
+        "twig/twig": "^3.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.0",
+        "knplabs/github-api": "^3.0",
+        "knplabs/packagist-api": "^2.0",
         "mockery/mockery": "^0.9",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/extension-installer": "^1.1",
@@ -116,6 +118,7 @@
         "symfony/phpunit-bridge": "^6.1",
         "symfony/test-pack": "^1.0",
         "symfony/web-profiler-bundle": "^5.4",
+        "symplify/monorepo-builder": "^11.1",
         "zalas/phpunit-globals": "^2.3"
     },
     "autoload": {
@@ -151,7 +154,8 @@
             "EMS\\FormBundle\\Tests\\": "EMS/form-bundle/tests/",
             "EMS\\Helpers\\Tests\\": "EMS/helpers/tests/",
             "EMS\\SubmissionBundle\\Tests\\": "EMS/submission-bundle/tests/",
-            "EMS\\Xliff\\Tests\\": "EMS/xliff/tests/"
+            "EMS\\Xliff\\Tests\\": "EMS/xliff/tests/",
+            "EMS\\Release\\": "release/"
         }
     },
     "scripts": {
@@ -181,10 +185,11 @@
         "symfony/polyfill-php72": "*"
     },
     "config": {
+        "sort-packages": true,
         "allow-plugins": {
             "phpstan/extension-installer": true,
             "symfony/flex": false,
-            "symfony/runtime": false,
+            "symfony/runtime": true,
             "endroid/installer": false
         }
     },
