--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,6 @@
         "firebase/php-jwt": "^5.2",
         "giggsey/libphonenumber-for-php": "^8.12",
         "guzzlehttp/guzzle": "^6.3",
-        "http-interop/http-factory-guzzle": "^1.0",
         "kevinrob/guzzle-cache-middleware": "^4.0",
         "league/flysystem-memory": "^2.0",
         "league/flysystem-sftp-v3": "^2.0",
@@ -98,11 +97,11 @@
         "twig/intl-extra": "^3.4",
         "twig/markdown-extra": "^3.4",
         "twig/string-extra": "^3.4",
-        "twig/twig": "^3.0",
-        "symplify/monorepo-builder": "^11.1"
+        "twig/twig": "^3.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.0",
+        "http-interop/http-factory-guzzle": "^1.0",
         "knplabs/github-api": "^3.0",
         "knplabs/packagist-api": "^2.0",
         "mockery/mockery": "^0.9",
