--- a/elasticms-admin/config/packages/doctrine_migrations.yaml
+++ b/elasticms-admin/config/packages/doctrine_migrations.yaml
@@ -7,3 +7,8 @@ doctrine_migrations:
             version_column_name: 'version'
             version_column_length: 191
             executed_at_column_name: 'executed_at'
+
+when@dev:
+  doctrine_migrations:
+    migrations_paths:
+      Application\Migrations: '%kernel.project_dir%/../EMS/core-bundle/src/Resources/DoctrineMigrations/pdo_%env(resolve:DB_DRIVER)%'
