feat: dev env (#144)
Co-authored-by: mdk <mathieu.dekeyzer@smals.be>

--- a/elasticms-admin/.env.dist
+++ b/elasticms-admin/.env.dist
@@ -10,7 +10,7 @@ APP_SECRET=7b19a4a6e37b9303e4f6bca1dc6691ed
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
-MAILER_URL=null://null
+MAILER_URL=smtp://localhost:1025
 ###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
@@ -19,11 +19,11 @@ MAILER_URL=null://null
 # Configure your db driver and server_version in config/packages/doctrine.yaml
 # elasticms supports currently 3 RDBMS: pgsql, mysql and sqlite
 # Pgsql default port 5432, mysql default port 3306s
-DB_DRIVER='sqlite'
-DB_USER='user'
-DB_PASSWORD='user'
-DB_PORT='1234'
-DB_NAME='app.db'
+DB_DRIVER='pgsql'
+DB_USER='demo'
+DB_PASSWORD='demo'
+DB_PORT='5432'
+DB_NAME='demo'
 ###< doctrine/doctrine-bundle ###
 
 ###> Redis ###
@@ -33,7 +33,7 @@ REDIS_PORT=6379
 
 ###> EMSCommonBundle ###
 EMS_ELASTICSEARCH_HOSTS='["http://localhost:9200"]'
-EMS_STORAGES='[{"type":"fs","path":"./var/assets"}]'
+EMS_STORAGES='[{"type":"s3","usage":"cache","upload-folder":"/tmp/ems-uploads","bucket":"demo","credentials":{"version":"2006-03-01","credentials":{"key":"accesskey","secret":"secretkey"},"region":"us-east-1","endpoint":"http://localhost:9099","use_path_style_endpoint":true}}]'
 EMS_CACHE=file_system
 EMS_CACHE_PREFIX=''
 EMS_METRIC_ENABLED=false
@@ -53,8 +53,8 @@ EMSCH_LOCALES='["en","fr","nl"]'
 ###< EMSCommonBundle ###
 
 ###> EMSCoreBundle ###
-EMSCO_TIKA_DOWNLOAD_URL='https://repo1.maven.org/maven2/org/apache/tika/tika-app/1.21/tika-app-1.21.jar'
-EMSCO_TIKA_SERVER=''
+EMSCO_TIKA_DOWNLOAD_URL='https://dlcdn.apache.org/tika/2.6.0/tika-app-2.6.0.jar'
+EMSCO_TIKA_SERVER='http://localhost:9998'
 EMSCO_PRIVATE_KEY=
 EMSCO_PUBLIC_KEY=
 EMSCO_INSTANCE_ID=elasticms_
@@ -73,8 +73,6 @@ EMSCO_FROM_EMAIL_NAME='elasticms'
 #EMSCO_ASSET_CONFIG_INDEX=''
 #EMSCO_UPLOAD_FOLDER=''
 #EMS_CIRCLES_OBJECT=''
-EMS_ASSET_CONFIG='{"preview":{"_config_type":"image","_width":300,"_height":200,"_resize":"fill","_radius":0,"_radius_geometry":["topleft","bottomright"]}}'
-#EMSCO_TRIGGER_JOB_FROM_WEB=true
 #EMSCO_PRE_GENERATED_OUUIDS=false
 #EMSCO_URL_USER=''
 ###< EMSCoreBundle ###
