--- a/composer.json
+++ b/composer.json
@@ -48,7 +48,7 @@
         "kevinrob/guzzle-cache-middleware": "^4.0",
         "league/flysystem-memory": "^2.0",
         "league/flysystem-sftp-v3": "^2.0",
-        "ocramius/doctrine-batch-utils": "2.1",
+        "ocramius/doctrine-batch-utils": "^2.5",
         "phpoffice/phpspreadsheet": "^1.16",
         "promphp/prometheus_client_php": "^2.6",
         "ramsey/uuid-doctrine": "^1.8",
