--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -3,16 +3,8 @@ includes:
 
 parameters:
     paths:
-        - %currentWorkingDirectory%/elasticms-admin/src
-        - %currentWorkingDirectory%/elasticms-cli/src
-        - %currentWorkingDirectory%/elasticms-web/src
-        - %currentWorkingDirectory%/EMS/client-helper-bundle/src
-        - %currentWorkingDirectory%/EMS/common-bundle/src
-        - %currentWorkingDirectory%/EMS/core-bundle/src
-        - %currentWorkingDirectory%/EMS/form-bundle/src
-        - %currentWorkingDirectory%/EMS/helpers/src
-        - %currentWorkingDirectory%/EMS/submission-bundle/src
-        - %currentWorkingDirectory%/EMS/xliff/src
+        - %currentWorkingDirectory%/elasticms-*/src
+        - %currentWorkingDirectory%/EMS/*/src
     excludePaths:
         - %currentWorkingDirectory%/vendor/*
         - %currentWorkingDirectory%/EMS/common-bundle/src/Resources/*
