--- a/elasticms-admin/.env.dist
+++ b/elasticms-admin/.env.dist
@@ -44,13 +44,13 @@ EMS_METRIC_HOST=''
 #EMS_BACKEND_API_KEY=''
 ###< EMSCommonBundle ###
 
-###> EMSCommonBundle ###
+###> EMSClientHelperBundle ###
 EMSCH_LOCALES='["en","fr","nl"]'
 #EMSCH_INSTANCE_ID='demo_pgsql_v1_'
 #EMSCH_TRANSLATION_TYPE='label'
 #EMSCH_ROUTE_TYPE='route'
 #EMSCH_TEMPLATES='{"template": {"name": "name","code": "body"}}'
-###< EMSCommonBundle ###
+###< EMSClientHelperBundle ###
 
 ###> EMSCoreBundle ###
 EMSCO_TIKA_DOWNLOAD_URL='https://dlcdn.apache.org/tika/2.6.0/tika-app-2.6.0.jar'
