feat: add optional emsch vars env for channel

--- a/elasticms-admin/.env.dist
+++ b/elasticms-admin/.env.dist
@@ -50,6 +50,8 @@ EMSCH_LOCALES='["en","fr","nl"]'
 #EMSCH_TRANSLATION_TYPE='label'
 #EMSCH_ROUTE_TYPE='route'
 #EMSCH_TEMPLATES='{"template": {"name": "name","code": "body"}}'
+#EMSCH_TEMPLATE_EMS_LINK='@EMSCH/template/ems/links/{type}.ems_link.twig'
+#EMSCH_TEMPLATE_ERROR='@EMSCH/template/views/error/error{code}.html.twig'
 ###< EMSClientHelperBundle ###
 
 ###> EMSCoreBundle ###
