feat: use purple color for local dev to be distinct with the "production" blue

--- a/elasticms-admin/.env.dist
+++ b/elasticms-admin/.env.dist
@@ -63,7 +63,7 @@ EMSCO_INSTANCE_ID=elasticms_
 EMSCO_NAME='<i class="ems-icon-ball"></i> elastic<b>ms</b>'
 EMSCO_SHORTNAME='<i class="ems-icon-ball"></i><span class="sr-only">elasticms</span>'
 EMSCO_SINGLE_TYPE_INDEX=false
-EMSCO_THEME_COLOR='yellow'
+EMSCO_THEME_COLOR='purple'
 #EMSCO_DATE_TIME_FORMAT='j/m/Y \a\t G:i'
 #EMSCO_DATEPICKER_FORMAT='dd/mm/yyyy'
 #EMSCO_DATEPICKER_WEEKSTART=1
